[tool.poetry]
name = "freesound-downloader"
version = "0.1.0"
description = ""
authors = ["Moritz Laass <moritz.laass@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
